# knowledge_secretary

./: .gitignore  CONTRACTS.md  LICENSE  README.md  config.yaml  pyproject.toml  topics.yaml  youtube_summary.md
.github/actions/publish/: action.yml
.github/workflows/: ci.yml  daily.yml
history/: 2026-07-23.json  2026-07-24.json
src/: run.py
src/core/: config.py  deliver.py  errors.py  gather.py  llm.py  models.py  net.py  registry.py  sources.py  sources_loader.py  state.py  userdata.py
src/delivery/: site.py  template.html
src/fetchers/: biorxiv.py  pubmed.py  rss.py  url.py  x.py  youtube.py
src/tasks/: __init__.py  runner.py
src/tasks/newsletter/: __init__.py  adapters.py  item_prompt.md  prompt.md  sources.py  sources.yaml  synthesis_prompt.md  task.py  utils.py
src/tasks/podcast/: __init__.py  discover.md  prompt.md  source_discovery_prompt.md  sources.yaml  task.py  utils.py
src/tasks/youtube/: __init__.py  adapters.py  prompt.md  sources.py  sources.yaml  task.py
state/: seen.json
tests/: test_newsletter.py  test_youtube.py
tests/e2e/: conftest.py  test_pipeline.py
tests/unit/: test_deliver.py  test_errors.py  test_fetchers.py  test_llm.py  test_net.py  test_newsletter.py  test_newsletter_adapters.py  test_newsletter_utils.py  test_podcast.py  test_podcast_utils.py  test_registry.py  test_run.py  test_runner.py  test_sources_loader.py  test_state.py  test_utils.py  test_youtube.py  test_youtube_adapters.py
