[project]
name = "knowledge-secretary"
version = "0.1.0"
description = "Daily $0 industry digest: newsletter, YouTube summaries, and a technical podcast."
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.50",
    "httpx>=0.27",
    "feedparser>=6.0",
    "trafilatura>=1.12",
    "youtube-transcript-api>=0.6",
    "podcastfy>=0.4",
    "edge-tts>=6.1",
    "markdown>=3.6",
    "PyYAML>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ty>=0.0.1a1",
    "ruff>=0.6",
]

[tool.uv]
package = false            # this is an application, not an installable library

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I import-sorting, UP pyupgrade (PEP585/604), B bugbear
select = ["E", "W", "F", "I", "UP", "B"]
